--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,8 @@
     <link href="css/sticky-menu.css" rel="stylesheet">
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+    <!-- MODIFICACION -->
+    <h2>MODIFICACIÓN AÑADIDA PARA EL EJERCICIO</h2>
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header page-scroll">
